dart/cpp/public/filament-dart.h

typedef struct BufferObjectBuilder *BufferObjectBuilderRef;
typedef struct BufferObject *BufferObjectRef;
typedef struct ColorGrading *ColorGradingRef;
typedef struct Engine *EngineRef;
typedef struct EntityManager *EntityManagerRef;
typedef struct Fence *FenceRef;
typedef struct IndexBuffer *IndexBufferRef;
typedef struct IndirectLight *IndirectLightRef;
typedef struct Texture *TextureRef;
///
/// Math types
///

typedef struct {
  float x;
  float y;
  float z;
} Vector3, *Vector3Ref;
typedef struct {
  union {
    float v[9];
    float m[3][3];
  };
} Matrix3x3, *Matrix3x3Ref;
int filament_fence_wait(FenceRef fence, int mode, long long timeoutMS);
BufferObjectBuilderRef filament_create_buffer_builder();
BufferObjectRef filament_engine_create_buffer_object(EngineRef engine, int byteCount, int bindingType);
ColorGradingRef filament_engine_create_color_grading(EngineRef engine);
void filament_destroy_color_grading(ColorGradingRef colorGrading);
///
/// Color
///
Vector3 filament_color_cct(float temperature);
Vector3 filament_color_illuminantD(float temperature);
///
/// EntityManager
///
EntityManagerRef filament_get_entity_manager();
int filament_entity_manager_create_entity(EntityManagerRef manager);
void filament_entity_manager_destroy_entity(int entityId);
int filament_entity_manager_entity_is_alive(int entityId);
///
/// IndexBuffer
///
IndexBufferRef filament_engine_create_index_buffer(EngineRef engine, int indexCount, int indexType);
int filament_index_buffer_get_index_count(IndexBufferRef buffer);
void filament_index_buffer_set_buffer(EngineRef engine, IndexBufferRef buffer, int destOffsetInBytes, int count);
///
/// IndirectLight
///
IndirectLightRef filament_engine_create_indirect_light(
    EngineRef engine, 
    TextureRef cubeMap,
    int irradianceBands, float* irradianceSh, int irradianceShCount,
    int radianceBands, float* radianceSh, int radianceShCount,
    float envIntensity,
    Matrix3x3* rotation);
float       filament_indirect_light_get_intensity(IndirectLightRef light);
void        filament_indirect_light_set_intensity(IndirectLightRef light, float intensity);
void        filament_indirect_light_get_rotation(IndirectLightRef light, Matrix3x3* result);
void        filament_indirect_light_set_rotation(IndirectLightRef light, Matrix3x3* rotation);
TextureRef  filament_indirect_light_get_reflections_texture(IndirectLightRef light);
TextureRef  filament_indirect_light_get_irradiance_texture(IndirectLightRef light);
Vector3     filament_indirect_light_get_direction_estimate(float* sh, int shCount, Vector3 direction);