dart/filament/lib/src/generated/native_gen.dart


  late final _filament_fence_waitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FenceRef, ffi.Int32, ffi.Int64)>>('filament_fence_wait');
  late final _filament_fence_wait =
      _filament_fence_waitPtr.asFunction<int Function(FenceRef, int, int)>();

  BufferObjectBuilderRef filament_create_buffer_builder() {
    return _filament_create_buffer_builder();
  }

  late final _filament_create_buffer_builderPtr =
      _lookup<ffi.NativeFunction<BufferObjectBuilderRef Function()>>(
          'filament_create_buffer_builder');
  late final _filament_create_buffer_builder =
      _filament_create_buffer_builderPtr
          .asFunction<BufferObjectBuilderRef Function()>();

  BufferObjectRef filament_engine_create_buffer_object(
    EngineRef engine,
    int byteCount,
    int bindingType,
  ) {
    return _filament_engine_create_buffer_object(
      engine,
      byteCount,
      bindingType,
    );
  }

  late final _filament_engine_create_buffer_objectPtr = _lookup<
      ffi.NativeFunction<
          BufferObjectRef Function(EngineRef, ffi.Int32,
              ffi.Int32)>>('filament_engine_create_buffer_object');
  late final _filament_engine_create_buffer_object =
      _filament_engine_create_buffer_objectPtr
          .asFunction<BufferObjectRef Function(EngineRef, int, int)>();

  ColorGradingRef filament_engine_create_color_grading(
    EngineRef engine,
  ) {
    return _filament_engine_create_color_grading(
      engine,
    );
  }

  late final _filament_engine_create_color_gradingPtr =
      _lookup<ffi.NativeFunction<ColorGradingRef Function(EngineRef)>>(
          'filament_engine_create_color_grading');
  late final _filament_engine_create_color_grading =
      _filament_engine_create_color_gradingPtr
          .asFunction<ColorGradingRef Function(EngineRef)>();

  void filament_destroy_color_grading(
    ColorGradingRef colorGrading,
  ) {
    return _filament_destroy_color_grading(
      colorGrading,
    );
  }

  late final _filament_destroy_color_gradingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ColorGradingRef)>>(
          'filament_destroy_color_grading');
  late final _filament_destroy_color_grading =
      _filament_destroy_color_gradingPtr
          .asFunction<void Function(ColorGradingRef)>();

  /// Color
  Vector3 filament_color_cct(
    double temperature,
  ) {
    return _filament_color_cct(
      temperature,
    );
  }

  late final _filament_color_cctPtr =
      _lookup<ffi.NativeFunction<Vector3 Function(ffi.Float)>>(
          'filament_color_cct');
  late final _filament_color_cct =
      _filament_color_cctPtr.asFunction<Vector3 Function(double)>();

  Vector3 filament_color_illuminantD(
    double temperature,
  ) {
    return _filament_color_illuminantD(
      temperature,
    );
  }

  late final _filament_color_illuminantDPtr =
      _lookup<ffi.NativeFunction<Vector3 Function(ffi.Float)>>(
          'filament_color_illuminantD');
  late final _filament_color_illuminantD =
      _filament_color_illuminantDPtr.asFunction<Vector3 Function(double)>();

  /// EntityManager
  EntityManagerRef filament_get_entity_manager() {
    return _filament_get_entity_manager();
  }

  late final _filament_get_entity_managerPtr =
      _lookup<ffi.NativeFunction<EntityManagerRef Function()>>(
          'filament_get_entity_manager');
  late final _filament_get_entity_manager =
      _filament_get_entity_managerPtr.asFunction<EntityManagerRef Function()>();

  int filament_entity_manager_create_entity(
    EntityManagerRef manager,
  ) {
    return _filament_entity_manager_create_entity(
      manager,
    );
  }

  late final _filament_entity_manager_create_entityPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(EntityManagerRef)>>(
          'filament_entity_manager_create_entity');
  late final _filament_entity_manager_create_entity =
      _filament_entity_manager_create_entityPtr
          .asFunction<int Function(EntityManagerRef)>();

  void filament_entity_manager_destroy_entity(
    int entityId,
  ) {
    return _filament_entity_manager_destroy_entity(
      entityId,
    );
  }

  late final _filament_entity_manager_destroy_entityPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32)>>(
          'filament_entity_manager_destroy_entity');
  late final _filament_entity_manager_destroy_entity =
      _filament_entity_manager_destroy_entityPtr
          .asFunction<void Function(int)>();

  int filament_entity_manager_entity_is_alive(
    int entityId,
  ) {
    return _filament_entity_manager_entity_is_alive(
      entityId,
    );
  }

  late final _filament_entity_manager_entity_is_alivePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'filament_entity_manager_entity_is_alive');
  late final _filament_entity_manager_entity_is_alive =
      _filament_entity_manager_entity_is_alivePtr
          .asFunction<int Function(int)>();

  /// IndexBuffer
  IndexBufferRef filament_engine_create_index_buffer(
    EngineRef engine,
    int indexCount,
    int indexType,
  ) {
    return _filament_engine_create_index_buffer(
      engine,
      indexCount,
      indexType,
    );
  }

  late final _filament_engine_create_index_bufferPtr = _lookup<
      ffi.NativeFunction<
          IndexBufferRef Function(EngineRef, ffi.Int32,
              ffi.Int32)>>('filament_engine_create_index_buffer');
  late final _filament_engine_create_index_buffer =
      _filament_engine_create_index_bufferPtr
          .asFunction<IndexBufferRef Function(EngineRef, int, int)>();

  int filament_index_buffer_get_index_count(
    IndexBufferRef buffer,
  ) {
    return _filament_index_buffer_get_index_count(
      buffer,
    );
  }

  late final _filament_index_buffer_get_index_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(IndexBufferRef)>>(
          'filament_index_buffer_get_index_count');
  late final _filament_index_buffer_get_index_count =
      _filament_index_buffer_get_index_countPtr
          .asFunction<int Function(IndexBufferRef)>();

  void filament_index_buffer_set_buffer(
    EngineRef engine,
    IndexBufferRef buffer,
    int destOffsetInBytes,
    int count,
  ) {
    return _filament_index_buffer_set_buffer(
      engine,
      buffer,
      destOffsetInBytes,
      count,
    );
  }

  late final _filament_index_buffer_set_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(EngineRef, IndexBufferRef, ffi.Int32,
              ffi.Int32)>>('filament_index_buffer_set_buffer');
  late final _filament_index_buffer_set_buffer =
      _filament_index_buffer_set_bufferPtr
          .asFunction<void Function(EngineRef, IndexBufferRef, int, int)>();

  /// IndirectLight
  IndirectLightRef filament_engine_create_indirect_light(
    EngineRef engine,
    TextureRef cubeMap,
    int irradianceBands,
    ffi.Pointer<ffi.Float> irradianceSh,
    int irradianceShCount,
    int radianceBands,
    ffi.Pointer<ffi.Float> radianceSh,
    int radianceShCount,
    double envIntensity,
    ffi.Pointer<Matrix3x3> rotation,
  ) {
    return _filament_engine_create_indirect_light(
      engine,
      cubeMap,
      irradianceBands,
      irradianceSh,
      irradianceShCount,
      radianceBands,
      radianceSh,
      radianceShCount,
      envIntensity,
      rotation,
    );
  }

  late final _filament_engine_create_indirect_lightPtr = _lookup<
          ffi.NativeFunction<
              IndirectLightRef Function(
                  EngineRef,
                  TextureRef,
                  ffi.Int32,
                  ffi.Pointer<ffi.Float>,
                  ffi.Int32,
                  ffi.Int32,
                  ffi.Pointer<ffi.Float>,
                  ffi.Int32,
                  ffi.Float,
                  ffi.Pointer<Matrix3x3>)>>(
      'filament_engine_create_indirect_light');
  late final _filament_engine_create_indirect_light =
      _filament_engine_create_indirect_lightPtr.asFunction<
          IndirectLightRef Function(
              EngineRef,
              TextureRef,
              int,
              ffi.Pointer<ffi.Float>,
              int,
              int,
              ffi.Pointer<ffi.Float>,
              int,
              double,
              ffi.Pointer<Matrix3x3>)>();

  double filament_indirect_light_get_intensity(
    IndirectLightRef light,
  ) {
    return _filament_indirect_light_get_intensity(
      light,
    );
  }

  late final _filament_indirect_light_get_intensityPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(IndirectLightRef)>>(
          'filament_indirect_light_get_intensity');
  late final _filament_indirect_light_get_intensity =
      _filament_indirect_light_get_intensityPtr
          .asFunction<double Function(IndirectLightRef)>();

  void filament_indirect_light_set_intensity(
    IndirectLightRef light,
    double intensity,
  ) {
    return _filament_indirect_light_set_intensity(
      light,
      intensity,
    );
  }

  late final _filament_indirect_light_set_intensityPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(IndirectLightRef, ffi.Float)>>(
      'filament_indirect_light_set_intensity');
  late final _filament_indirect_light_set_intensity =
      _filament_indirect_light_set_intensityPtr
          .asFunction<void Function(IndirectLightRef, double)>();

  void filament_indirect_light_get_rotation(
    IndirectLightRef light,
    ffi.Pointer<Matrix3x3> result,
  ) {
    return _filament_indirect_light_get_rotation(
      light,
      result,
    );
  }

  late final _filament_indirect_light_get_rotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(IndirectLightRef,
              ffi.Pointer<Matrix3x3>)>>('filament_indirect_light_get_rotation');
  late final _filament_indirect_light_get_rotation =
      _filament_indirect_light_get_rotationPtr.asFunction<
          void Function(IndirectLightRef, ffi.Pointer<Matrix3x3>)>();

  void filament_indirect_light_set_rotation(
    IndirectLightRef light,
    ffi.Pointer<Matrix3x3> rotation,
  ) {
    return _filament_indirect_light_set_rotation(
      light,
      rotation,
    );
  }

  late final _filament_indirect_light_set_rotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(IndirectLightRef,
              ffi.Pointer<Matrix3x3>)>>('filament_indirect_light_set_rotation');
  late final _filament_indirect_light_set_rotation =
      _filament_indirect_light_set_rotationPtr.asFunction<
          void Function(IndirectLightRef, ffi.Pointer<Matrix3x3>)>();

  TextureRef filament_indirect_light_get_reflections_texture(
    IndirectLightRef light,
  ) {
    return _filament_indirect_light_get_reflections_texture(
      light,
    );
  }

  late final _filament_indirect_light_get_reflections_texturePtr =
      _lookup<ffi.NativeFunction<TextureRef Function(IndirectLightRef)>>(
          'filament_indirect_light_get_reflections_texture');
  late final _filament_indirect_light_get_reflections_texture =
      _filament_indirect_light_get_reflections_texturePtr
          .asFunction<TextureRef Function(IndirectLightRef)>();

  TextureRef filament_indirect_light_get_irradiance_texture(
    IndirectLightRef light,
  ) {
    return _filament_indirect_light_get_irradiance_texture(
      light,
    );
  }

  late final _filament_indirect_light_get_irradiance_texturePtr =
      _lookup<ffi.NativeFunction<TextureRef Function(IndirectLightRef)>>(
          'filament_indirect_light_get_irradiance_texture');
  late final _filament_indirect_light_get_irradiance_texture =
      _filament_indirect_light_get_irradiance_texturePtr
          .asFunction<TextureRef Function(IndirectLightRef)>();

  Vector3 filament_indirect_light_get_direction_estimate(
    ffi.Pointer<ffi.Float> sh,
    int shCount,
    Vector3 direction,
  ) {
    return _filament_indirect_light_get_direction_estimate(
      sh,
      shCount,
      direction,
    );
  }
